Added subtitle to titlepage. Closes #2

--- a/TutorialAndDevGuide/Tutorial/tutorial.tex
+++ b/TutorialAndDevGuide/Tutorial/tutorial.tex
@@ -168,7 +168,8 @@ The National Institute of Aerospace / Galois Inc. / NASA LaRC
 
 {\Huge \bfseries
 An Introduction to Copilot
-}
+}\\
+A tutorial to Copilot 3.0
 \HRule
 
 \vspace{1cm}
