--- a/TutorialAndDevGuide/Tutorial/introduction.tex
+++ b/TutorialAndDevGuide/Tutorial/introduction.tex
@@ -22,7 +22,7 @@ provides an assured level of safety even when the SUO itself cannot be
 verified by conventional means.
 
 
-Copilot is a RV framework for specifying and generating monitors for C programs that is 
+Copilot is a RV framework for specifying and generating monitors for C programs that is
 embedded into the functional programming language Haskell
 \cite{PeytonJones02}.  A working knowledge of Haskell is necessary to use
 Copilot effectively; a variety of books and free web resources introduce Haskell.
@@ -57,8 +57,8 @@ a shared global clock.
 
 \subsection{Installation} \label{sec:install}
 
-Before downloading the copilot source code, you must first install an up-to-date version of GHC.
-(The minimal required version is 7.10.1)
+Before downloading the copilot source code, you must first install an
+up-to-date version of GHC (the minimal required version is 8.0).
 The easiest way to do this is to download and install the Haskell Platform,
 which is freely distributed from here:
 
@@ -67,7 +67,7 @@ which is freely distributed from here:
 \end{center}
 
 \noindent Because Copilot compiles to C code, you must also install a C compiler such as gcc (\url{https://gcc.gnu.org/install/}).  \textbf{XCODE?} After having installed the Haskell Platform and C compiler, Copilot can be downloaded and
-installed in the following two ways: 
+installed in the following two ways:
 
 \begin{itemize}
 \item \textbf{Using Cabal: } Copilot can be downloaded and installed by executing the following command:
@@ -78,33 +78,32 @@ installed in the following two ways:
 
 \noindent This should, if everything goes well, install Copilot on your system.
 
-\item \textbf{Using Git: } 
+\item \textbf{Using Git: }
 
 \begin{code}
      git clone https://github.com/Copilot-Language/Copilot.git
-     git submodule update --init
-     make test
+     git submodule update --init --remote
+     make
 \end{code}
 \end{itemize}
 
 \noindent To use the language, your Haskell module should contain the following import:
 %
 \begin{code}
-import Language.Copilot  
+import Language.Copilot
 \end{code}
 %
-To use the back-ends, import them, respectively:
+To use the C99 back-end, import it:
 %
 \begin{code}
 import Copilot.Compile.C99
-import Copilot.Compile.SBV
 \end{code}
 %
 If you need to use functions defined in the Prelude that are redefined by
-Copilot (e.g., arithmetic operators), import the Prelude as qualified:
+Copilot (e.g., arithmetic operators), import the Prelude qualified:
 %
 \begin{code}
-import qualified Prelude as P  
+import qualified Prelude as P
 \end{code}
 
 \subsection{Structure} \label{structure}
@@ -135,7 +134,7 @@ rate to obtain enough discrete points to represent the physical sound
 wave. The fidelity of the recording is dependant on the sampling
 rate. Sampling a state variable of an executing program is similar,
 but variables are rarely continuous signals so they lack the nice
-properties of continuity.  
+properties of continuity.
 Monitoring based on sampling state-variables has historically been disregarded
 as a runtime monitoring approach, for good reason: without the assumption of
 synchrony between the monitor and observed software, monitoring via sampling may
