Removes sections 4-end. Refs #10.
Files are left, commented out. We'll probably need these files (or some
of it) very soon, although we can remove them too for now.

--- a/TutorialAndDevGuide/Tutorial/tutorial.tex
+++ b/TutorialAndDevGuide/Tutorial/tutorial.tex
@@ -46,7 +46,7 @@
 \usetikzlibrary{positioning}
 % boxes around figs
 \usepackage{float}
-\floatstyle{boxed} 
+\floatstyle{boxed}
 \restylefloat{figure}
 
 
@@ -295,7 +295,7 @@ expositions and examples.
 The authors are grateful for NASA Contract NNL08AD13T to Galois Inc. and the
 National Institute of Aerospace, which partially supported this work.
 Thanks to Lars Kuhtz, Benedetto Di~Vito,  Robin Morisset, Kaveh
-Darafsheh, Alwyn Goodloe.  
+Darafsheh, Alwyn Goodloe.
 
 {
 
@@ -303,18 +303,18 @@ Darafsheh, Alwyn Goodloe.
 \input{introduction}
 \input{Interpret}
 \input{Language}
-\input{Examples}
-\input{LogicExample} 
-\input{Advanced}
+% \input{Examples}
+% \input{LogicExample}
+% \input{Advanced}
 \addcontentsline{toc}{section}{References}
 \bibliographystyle{alpha}
 \bibliography{mybib}
 }
 
-\begin{appendices}
-\input{WellClearCode}
-\input{Grammar/BNF}
-\input{Grammar/Typing}
-\end{appendices}
+% \begin{appendices}
+% \input{WellClearCode}
+% \input{Grammar/BNF}
+% \input{Grammar/Typing}
+% \end{appendices}
 \end{document}
 
