Removes pointer to now-missing appendix. Refs #10.

--- a/TutorialAndDevGuide/Tutorial/Language.tex
+++ b/TutorialAndDevGuide/Tutorial/Language.tex
@@ -406,8 +406,9 @@ the type of {\tt extern "x"} is ambiguous, since it cannot be inferred from a
 Boolean stream and we have not given an explicit type signature.  For
 convenience, typed {\tt extern} functions are provided, e.g., {\tt externW8} or
 {\tt externI64} denoting an external unsigned 8-bit word or signed 64-bit word,
-respectively. Please see the grammar in Appendix~\ref{sec:BNF} for the list of
-all sampling functions.
+respectively.
+% Please see the grammar in Appendix~\ref{sec:BNF} for the list of
+% all sampling functions.
 
 In general it is best practice to define external symbols with
 top-level definitions, e.g.,
