Removes Alwyn from acknowledgments (he is now author). Refs #3.

--- a/TutorialAndDevGuide/Tutorial/tutorial.tex
+++ b/TutorialAndDevGuide/Tutorial/tutorial.tex
@@ -330,7 +330,7 @@ expositions and examples.
 The authors are grateful for NASA Contract NNL08AD13T to Galois Inc. and the
 National Institute of Aerospace, which partially supported this work.
 Thanks to Lars Kuhtz, Benedetto Di~Vito,  Robin Morisset, Kaveh
-Darafsheh, Alwyn Goodloe.
+Darafsheh.
 
 {
 
