Typo ratei -> rate. Refs #6

--- a/TutorialAndDevGuide/Tutorial/introduction.tex
+++ b/TutorialAndDevGuide/Tutorial/introduction.tex
@@ -178,7 +178,7 @@ the monitored program is physically distributed.
 When deciding whether to use Copilot to monitor systems that are not hard real-time, the user must determine if
 sampling is suitable to capture the errors and faults of interest in the  SUO. In many cyber-physical systems, the trace being monitored is
 coming from sensors measuring physical data such as GPS coordinates, air speed, and actuation signals. These continuous signals do not
-change abruptly so as long as it is sampled at a suitable ratei, that usually must be determined experimentally, sampling is sufficient.
+change abruptly so as long as it is sampled at a suitable rate, that usually must be determined experimentally, sampling is sufficient.
 
 
 
