Fixed 'Nearly 20 years'. Refs #12

--- a/TutorialAndDevGuide/Tutorial/introduction.tex
+++ b/TutorialAndDevGuide/Tutorial/introduction.tex
@@ -3,7 +3,7 @@
 
  
 Neither formal verification nor testing can ensure system reliability.
-Nearly 20 years ago, Butler and Finelli showed that testing alone cannot verify
+Over 25 years ago, Butler and Finelli showed that testing alone cannot verify
 the reliability of ultra-critical software~\cite{butler}.
 \emph{Runtime verification} (RV)~\cite{monitors}, where monitors
 detect and respond to property violations at runtime, has the
