Removed XCODE in part about C compiler. Refs #12

--- a/TutorialAndDevGuide/Tutorial/introduction.tex
+++ b/TutorialAndDevGuide/Tutorial/introduction.tex
@@ -66,7 +66,7 @@ which is freely distributed from here:
 \url{http://hackage.haskell.org/platform}
 \end{center}
 
-\noindent Because Copilot compiles to C code, you must also install a C compiler such as GCC (\url{https://gcc.gnu.org/install/}).  \textbf{XCODE?} After having installed the Haskell Platform and C compiler, Copilot can be downloaded and
+\noindent Because Copilot compiles to C code, you must also install a C compiler such as GCC (\url{https://gcc.gnu.org/install/}). After having installed the Haskell Platform and C compiler, Copilot can be downloaded and
 installed in the following two ways:
 
 \begin{itemize}
