--- a/TutorialAndDevGuide/Tutorial/tutorial.tex
+++ b/TutorialAndDevGuide/Tutorial/tutorial.tex
@@ -338,6 +338,7 @@ Darafsheh.
 \input{introduction}
 \input{Interpret}
 \input{Language}
+\input{example}
 \addcontentsline{toc}{section}{References}
 \bibliographystyle{alpha}
 \bibliography{mybib}
