Added specification code to example. Refs #15

--- a/TutorialAndDevGuide/Tutorial/example.tex
+++ b/TutorialAndDevGuide/Tutorial/example.tex
@@ -61,3 +61,46 @@ Theoretically there could be multiple calls to \texttt{step()} throughout the
 program, but this complicated things and is highly discouraged.
 
 
+\subsection{Specification}
+The code for this specification can be found in the \texttt{Examples} directory
+of Copilot, or from the
+repository\footnote{\url{https://github.com/Copilot-Language/Copilot/blob/master/Examples/Heater.hs}}.
+
+\begin{lstlisting}[language = Copilot, frame = single, numbers = left]
+--------------------------------------------------------------------------------
+-- Copyright 2019 National Institute of Aerospace / Galois, Inc.
+--------------------------------------------------------------------------------
+
+-- This is a simple example with basic usage. It implements a simple home
+-- heating system: It heats when temp gets too low, and stops when it is high
+-- enough. It read temperature as a byte (range -50C to 100C) and translates
+-- this to Celcius.
+
+module Heater where
+
+import Language.Copilot
+import Copilot.Compile.C99
+
+import Prelude hiding ((>), (<), div)
+
+-- External temperature as a byte, range of -50C to 100C
+temp :: Stream Int8
+temp = extern "temperature" Nothing
+
+-- Calculate temperature in Celcius.
+-- We need to cast the Int8 to a Float. Note that it is an unsafeCast, as there
+-- is no direct relation between Int8 and Float.
+ctemp :: Stream Float
+ctemp = (unsafeCast temp) * (150.0 / 255.0) - 50.0
+
+spec = do
+  -- Triggers that fire when the ctemp is too low or too hight,
+  -- pass the current ctemp as an argument.
+  trigger "heaton"  (ctemp < 18.0) [arg ctemp]
+  trigger "heatoff" (ctemp > 21.0) [arg ctemp]
+
+-- Compile the spec
+main = reify spec >>= compile "heater"
+\end{lstlisting}
+The code should be pretty self explanatory. Note that we opted to use a
+\texttt{main}-function, which reifies and compiles the code for us.
