--- a/TutorialAndDevGuide/Tutorial/tutorial.tex
+++ b/TutorialAndDevGuide/Tutorial/tutorial.tex
@@ -44,6 +44,7 @@
 \usetikzlibrary{arrows,automata}
 \usepackage{tikz-cd}
 \usetikzlibrary{positioning}
+\usepackage{gensymb} % \degree symbol
 % boxes around figs
 \usepackage{float}
 \floatstyle{boxed}
