Added code example to structs part. Refs #17

--- a/TutorialAndDevGuide/Tutorial/Language.tex
+++ b/TutorialAndDevGuide/Tutorial/Language.tex
@@ -238,6 +238,54 @@ matter what the values of the fields are, we just need to return something of
 the correct type.
 
 
+\subsubsection*{Example code}
+\begin{example}
+\label{exm:struct}
+Now that we defined all there is, we can make streams of structs. The following
+code has been taken from the \texttt{Struct.hs} example, and shows the basic
+usage of structs.
+
+\begin{lstlisting}[language=Copilot]
+{-# LANGUAGE DataKinds #-}
+
+module Struct where
+
+import Language.Copilot
+import Copilot.Compile.C99
+
+import Prelude hiding ((>), (<), div, (++))
+
+
+data Vec = Vec
+  { x :: Field "x" Float
+  , y :: Field "y" Float
+  }
+
+instance Struct Vec where
+  typename _ = "vec"  -- Name of the type in C
+
+  -- Function to translate Vec to list of Value's, order should match struct.
+  toValues v = [ Value Float (x v)
+               , Value Float (y v)
+               ]
+
+-- We need to provide an instance to Typed with a bogus Vec
+instance Typed Vec where
+  typeOf = Struct (Vec (Field 0) (Field 0))
+
+
+vecs :: Stream Vec
+vecs = [ Vec (Field 1) (Field 2)
+       , Vec (Field 12) (Field 8)
+       ] ++ vecs
+
+
+spec = do
+  -- Trigger that always executes, splits the vec into seperate args.
+  trigger "split" true [arg $ vecs # x, arg $ vecs # y]
+\end{lstlisting}
+\end{example}
+
 \subsection{Functions on Streams} \label{sec:FnOnStreams}
 
 Given that constants and operators work pointwise on streams, we can use Haskell
