Fixed reference to external variable section. Refs #18

--- a/TutorialAndDevGuide/Tutorial/Language.tex
+++ b/TutorialAndDevGuide/Tutorial/Language.tex
@@ -135,7 +135,7 @@ disallowed.  While an analogous stream is definable in a lazy language, we bar
 it in Copilot, since it requires future values of {\tt f} to be
 generated before producing values for {\tt g}.  This is not possible since
 Copilot programs may take inputs in real-time from the environment (see
-Section~\ref{sec:interacting}).
+Section~\ref{subsec:interacting}).
 
 
 \subsection{Structs}
