Fixed reference to complete example. Refs #22

--- a/TutorialAndDevGuide/Tutorial/Interpret.tex
+++ b/TutorialAndDevGuide/Tutorial/Interpret.tex
@@ -104,5 +104,5 @@ This generates two output files:
   monitor. This file should be included from your main project.
 \end{itemize}
 
-Please refer to the complete example \ref{exm:complete} for more on detail to
-use the monitor in your C program.
+Please refer to the complete example \ref{sec:complete_example} for more on
+detail to use the monitor in your C program.
