Added newer contracts to titlepage. Refs #11

--- a/TutorialAndDevGuide/Tutorial/tutorial.tex
+++ b/TutorialAndDevGuide/Tutorial/tutorial.tex
@@ -299,8 +299,8 @@ Hampton, Virginia, United States, \today
 %\end{tabular}
 
 \let\thefootnote\relax\footnotetext{
-This research is supported by NASA Contract NNL08AD13T from the Aviation Safety
-Program Office.
+This research is supported by NASA Contract NNL08AD13T, 80LARC17C0004 and
+NNL09AA00A.
 }
 
 \end{center}
